Support Apex as well

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
         "Linters"
     ],
     "activationEvents": [
-        "onLanguage:java"
+        "onLanguage:java",
+        "onLanguage:apex"
     ],
     "repository": {
         "type": "git",
